<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/moneda"
        style="@style/posicion_img"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/posicion_rb">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        android:id="@+id/rb_euro"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/imageView"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:id="@+id/rb_moneda"
        android:layout_below="@+id/rb_euro"
        android:layout_alignStart="@+id/rb_euro"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dolar"
        android:id="@+id/rb_dolar"
        android:layout_below="@+id/rb_moneda"
        android:layout_alignStart="@+id/rb_moneda"
        android:checked="false"/>

    </RadioGroup>


</RelativeLayout>